[project]
name = "memoria-audiovisual-rede"
version = "0.1.0"
description = "Crawler, relatorios e app Streamlit para mapeamento de acervos audiovisuais em rede."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "beautifulsoup4",
  "openpyxl",
  "pandas",
  "playwright",
  "pypdf",
  "requests",
  "streamlit",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
